02_routing-via-percent/green-destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  namespace: training
  name: green
spec:
  host: green.training.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
