02_routing-via-percent/green-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  namespace: training
  name: green
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: green.training.svc.cluster.local
            subset: v1
          weight: 10
        - destination:
            host: green.training.svc.cluster.local
            subset: v2
          weight: 90
